// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ebay-menu Checkbox 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="true"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 1"
      >
        <span
          aria-hidden="false"
        >
          item 1
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 2"
      >
        <span
          aria-hidden="false"
        >
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-checked="true"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 3"
      >
        <span
          aria-hidden="false"
        >
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu Default 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu Radio 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-checked="true"
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 1"
      >
        <span
          aria-hidden="false"
        >
          item 1
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 2"
      >
        <span
          aria-hidden="false"
        >
          item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 3"
      >
        <span
          aria-hidden="false"
        >
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Badges 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        aria-label="item 1 (5 unread items)"
        class="menu__item menu__item--badged"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          item 1
          <span
            aria-hidden="true"
            class="badge"
          >
            5
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-label="item 2 (23 unread items)"
        class="menu__item menu__item--badged"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="true"
        >
          item 2
          <span
            aria-hidden="true"
            class="badge"
          >
            23
          </span>
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Disabled Item 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        aria-disabled="true"
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Icons 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          <svg
            aria-hidden="true"
            class="icon icon--confirmation"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-confirmation"
            />
          </svg>
           Confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 2"
      >
        <span
          aria-hidden="false"
        >
          <svg
            aria-hidden="true"
            class="icon icon--attention"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-attention"
            />
          </svg>
           Not yet confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
        value="item 3"
      >
        <span
          aria-hidden="false"
        >
          <svg
            aria-hidden="true"
            class="icon icon--attention"
            focusable="false"
            height="24px"
            style="margin-right: 8px;"
            width="24px"
            xmlns="http://www.w3.org/2000/svg"
          >
            <use
              xlink:href="#icon-attention"
            />
          </svg>
           Not yet confirmed
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;

exports[`Storyshots ebay-menu With Separator 1`] = `
<DocumentFragment>
  <span
    class="menu"
  >
    <div
      class="menu__items"
      role="menu"
    >
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          item 1 that has very long text
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 2
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <hr
        class="menu__separator"
        role="separator"
        tabindex="0"
      />
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 3
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 4
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
      <div
        class="menu__item"
        role="menuitem"
        tabindex="0"
      >
        <span
          aria-hidden="false"
        >
          Item 5
        </span>
        <svg
          aria-hidden="true"
          class="icon icon--tick-small"
          focusable="false"
          height="16px"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <use
            xlink:href="#icon-tick-small"
          />
        </svg>
      </div>
    </div>
  </span>
</DocumentFragment>
`;
